		* src/draw.c (drawGameOverText): uses the "label" structure now
		* src/piece.c (mapKingPotentialMoves): optimized castling

2021-02-03	version 00-0005
	Created the move list, which currently doesn't do anything useful.
	
	source file changes
		* created a new source file src/move_list.c
		* str/move.c (movePiece): now adds to the list of moves after move

	header file changes
		* include/vgcp.h: added the move list structure, updated prototypes

2021-02-05	version 00-0006
	Added "capture" boolean to the move structure and added support for the 50-move rule (= added the halfmove clock), fixed a bug (crashing on clicking off board)

	source file changes
		* src/move.c: created new function for updating the halfmove clock (updateHalfmoveClock)
		* src/move.c (movePiece): now updates the halfmove clock after piece has moved 
			and checks for a draw as a result of the 50-move rule.

	header file changes
		* include/vgcp.h: added the capture boolean to the move structure, updated prototypes

2021-02-06	version 00-0007
	Now stores the game state into the (new) position structure. The position structure stores the board, castling rights, the previous move and the player that will move next. This will be useful when checking for repitition (when storing a list of them).

	source file changes
		* created a new source file for updating and initializing the current position (src/position.c)
		* almost all: Now uses the position structure.
		* src/move.c: created a new function specifically to handle castling (castleKing),
			created a new function specifically to handle adding a potential castling move
			(addPotentialCastling)
		* src/move.c (movePiece): no longer handles castling, 
			now removes castling rights here if rook or king moves
		* src/move.c: (addPotentialMove): no longer handles adding potential castling

	header file changes:
		* include/vgcp.h: created the position structure, updated prototypes