@@ -88,3 +88,15 @@ NOTE: These entries may not contain every single minor change but should contain
 
 	header file changes:
 		* include/vgcp.h: created the position structure, updated prototypes
+
+	EDIT: removed blank line (2021-02-12)
+
+2021-02-12	version 00-0008
+	Changed the moveList structure into the positionList structure which stores the entire chess position. The position list will be used to check repitition.
+	
+	source file changes
+		* created a new source file for the position list (src/position_list.c)
+		* src/move.c (movePiece): now updates the position list (not the move list)
+
+	header file changes
+		* include/vgcp.h: created the position list structure, updated prototypes 
